# translate-app

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .prettierignore
backend/: .pre-commit-config.yaml  devbox.json  main.py  pyproject.toml
backend/backend/api/: __init__.py  exceptions.py
backend/backend/api/apps/: widget.py
backend/backend/api/routers/auth/: __init__.py  dependencies.py  models.py  password.py  registration.py  session.py
backend/backend/api/routers/health/: __init__.py  health.py
backend/backend/api/routers/payments/: __init__.py  models.py  plans.py  webhook.py
backend/backend/api/routers/simplify/: __init__.py  chat.py  models.py  profiles.py  settings.py  website_overrides.py
backend/backend/api/routers/translate/: utils.py
backend/backend/api/routers/users/: __init__.py  handlers.py  router.py
backend/backend/api/routers/widget/: __init__.py
backend/backend/common/: exceptions.py
backend/backend/core/: db.py
backend/backend/core/settings/: __init__.py  enums.py
backend/backend/core/settings/aws/: parameter_store.py  (+1 more)
backend/backend/docs/: README.md  cookies.md
backend/backend/prompts/: __init__.py  main.jinja2
backend/backend/services/auth/: exceptions.py  helpers.py  models.py
backend/backend/services/chat/: __init__.py  models.py
backend/backend/services/payments/: plans.py
backend/backend/services/users/: __init__.py  models.py  subscription.py  user_management.py
backend/backend/utils/: beanie_helpers.py  constants.py  helpers.py  log.py
backend/scripts/: output_openapi_spec.py
infra/: index.ts  (+3 more)
(+108 files in other folders)
